--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,7 @@
       color="#5bbad5"
     />
     <meta name="theme-color" content="#ffffff" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
     <link
       href="https://fonts.googleapis.com/css?family=Lato|Rajdhani|Roboto+Condensed&display=swap"
       rel="stylesheet"
@@ -54,7 +51,27 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Transmute</title>
+    <title>jsld</title>
+
+    <meta name="description" content="Linked Data as JSON" />
+
+    <meta
+      name="keywords"
+      content="jsonld,jose,jws,jwk,jwks,jwa,linked-data,rdf,graph,signature"
+    />
+    <meta
+      name="keyword"
+      content="jsonld,jose,jws,jwk,jwks,jwa,linked-data,rdf,graph,signature"
+    />
+
+    <meta property="og:title" content="Linked Data as JSON" />
+    <meta property="og:type" content="documentation" />
+    <meta
+      property="og:image"
+      content="/images/Cyber-Security-FDA-Voices-1600x900.jpg"
+    />
+    <meta property="og:site_name" content="Linked Data as JSON" />
+    <meta property="og:url" content="http://jsld.org" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
